# CleanHub

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  runserver.sh  setup.cfg
app/: settings.py  urls.py
cleanhub/: manage.py
cleanhub/cleanhub/: asgi.py  settings.py  urls.py  wsgi.py
